Initial main page created

--- a/index.html
+++ b/index.html
@@ -2,7 +2,48 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css" />
+        <title> Be My Valentine </title>
     </head>
     <body>
+        <h1> My Love For You</h1>
+        <p>
+            To love is to share life together, <br>
+            to build special plans just for two, <br>
+            to work side by side, <br>
+            and then smile with pride, <br>
+            as one by one, dreams all come true. <br>
+            <br>
+            To love is to help and encourage <br>
+            with smiles and sincere words of praise, <br>
+            to take time to share, <br>
+            to listen and care <br>
+            in tender, affectionate ways. <br>
+            <br>
+            To love is to have someone special, <br>
+            one on whom you can always depend <br>
+            to be there through the years, <br>
+            sharing laughter and tears, <br>
+            as a partner, a lover, a friend. <br>
+            <br>
+            To love is to make special memories <br>
+            of moments you love to recall, <br>
+            of all the good things <br>
+            that sharing life brings. <br>
+            Love is the greatest of all. <br>
+            <br>
+            I've learned the full meaning <br>
+            of sharing and caring <br>
+            and having my dreams all come true; <br>
+            I've learned the full meaning <br>
+            of being in love <br>
+            by being and loving with you. <br>
+
+        </p>
+        <div class="heart"></div>
+        <h1>
+            Will You Be My Valentine?
+        </h1>
+        <button> Yes </button>
+        <button> No </button>
     </body>
 </html>
