--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title> Be My Valentine </title>
     </head>
     <body>
-        <h1> My Love For You TEST</h1>
+        <h1> My Love For You </h1>
         <p>
             To love is to share life together, <br>
             to build special plans just for two, <br>
@@ -40,9 +40,7 @@
 
         </p>
         <div class="heart"></div>
-        <h1>
-            Will You Be My Valentine?
-        </h1>
+        <h1> Will You Be My Valentine? </h1>
         <button> Yes </button>
         <button> No </button>
     </body>
