added script file for button transition

--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
 
         </p>
         <div class="heart"></div>
+
         <h1> Will You Be My Valentine? </h1>
-        <button> Yes </button>
-        <button> No </button>
+
+        <button onclick="handleYes()"> Yes </button>
+
+        <button onclick="handleNo()"> No </button>
+
+        <p id="response"></p>
+
+        <script src="script.js"></script>
     </body>
 </html>
